--- a/src/main/resources/Templates/Uform_validation.html
+++ b/src/main/resources/Templates/Uform_validation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr" html xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:replace="fragments/_head.html::head"></th:block>
+<th:block th:replace="Fragment/_head.html::head"></th:block>
 
 <body class="nav-md">
     <div class="container body">
