--- a/src/main/resources/Templates/infoEtudiant.html
+++ b/src/main/resources/Templates/infoEtudiant.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" html xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="fragments/_head.html::head"></th:block>
-
+<th:block th:replace="Fragment/_head.html::head"></th:block>
   <body class="nav-md">
     <div class="container body">
       <div class="main_container">
