--- a/src/main/resources/Templates/login.html
+++ b/src/main/resources/Templates/login.html
@@ -2,7 +2,7 @@
 
 <html lang="en" html xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:replace="fragments/_head.html::head"></th:block>
+<th:block th:replace="Fragment/_head.html::head"></th:block>
   <body class="login">
     <div>
       <a class="hiddenanchor" id="signup"></a>
