Creation d'un controler et modification des Fragments et Bugs

--- a/src/main/resources/Templates/UPaiement.html
+++ b/src/main/resources/Templates/UPaiement.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
 <html lang="fr" html xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="Fragment/_head.html::head"></th:block>
-
+<head>
+    <th:block th:replace="Fragment/_head.html::head"></th:block>
+</head>
 <body class="nav-md">
     <div class="container body">
         <div class="main_container">
