--- a/src/main/resources/Templates/index.html
+++ b/src/main/resources/Templates/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" html xmlns:th="http://www.thymeleaf.org">
+<head>
 <th:block th:replace="Fragment/_head.html::head"></th:block>
-
+</head>
   <body class="nav-md">
     <div class="container body">
       <div class="main_container">
         <div class="col-md-3 left_col">
-          <th:block th:replace="Fragment/_leftcolAdmin.html::leftcolAdmin"></th:block>
+          <th:block th:replace="Fragment/_leftcolUser.html::leftcolUser"></th:block>
         </div>
         <th:block th:replace="Fragment/_topnav.html::topnav"></th:block>
         <!-- /top navigation -->
