--- a/src/main/resources/Templates/Fragment/_head.html
+++ b/src/main/resources/Templates/Fragment/_head.html
@@ -1,6 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org" >
 
 <th:block th:fragment="head">
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
@@ -10,29 +11,29 @@
     <title>CITE - WE! | </title>
 
     <!-- Bootstrap -->
-    <link th:href="@{../cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css}">
-    <link th:href="@{../vendors/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
+    <link th:href="@{/gentelella-master/vendors/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
     <!-- Font Awesome -->
-    <link th:href="@{../vendors/font-awesome/css/font-awesome.min.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/vendors/font-awesome/css/font-awesome.min.css}" rel="stylesheet">
     <!-- NProgress -->
-    <link th:href="@{../vendors/nprogress/nprogress.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/vendors/nprogress/nprogress.css}" rel="stylesheet">
     <!-- bootstrap-daterangepicker -->
-    <link th:href="@{../vendors/bootstrap-daterangepicker/daterangepicker.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/vendors/bootstrap-daterangepicker/daterangepicker.css}" rel="stylesheet">
     <!-- iCheck -->
-    <link th:href="@{../vendors/iCheck/skins/flat/green.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/vendors/iCheck/skins/flat/green.css}" rel="stylesheet">
     <!-- Datatables -->
 
-    <link th:href="@{../vendors/datatables.net-bs/css/dataTables.bootstrap.min.css}" rel="stylesheet">
-    <link th:href="@{../vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css}" rel="stylesheet">
-    <link th:href="@{../vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css}" rel="stylesheet">
-    <link th:href="@{../vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css}" rel="stylesheet">
-    <link th:href="@{../vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css}" rel="stylesheet">
 
 
     <!-- Custom Theme Style -->
-    <link th:href="@{../build/css/custom.min.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/build/css/custom.min.css}" rel="stylesheet">
 
-    <link th:href="@{../build/css/style.css}" rel="stylesheet">
+    <link th:href="@{/gentelella-master/build/css/style.css}" rel="stylesheet">
     <style>
         .styled {
     border: 0;
