--- a/src/main/resources/Templates/Ufactures.html
+++ b/src/main/resources/Templates/Ufactures.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" html xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="fragments/_head.html::head"></th:block>
+<head>
+  <th:block th:replace="fragments/_head.html::head"></th:block>
+</head>
   <body class="nav-md">
     <div class="container body">
       <div class="main_container">
