--- a/src/main/resources/Templates/indexadmin.html
+++ b/src/main/resources/Templates/indexadmin.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" html xmlns:th="http://www.thymeleaf.org">
+<head>
 <th:block th:replace="Fragment/_head.html::head"></th:block>
-
+</head>
   <body class="nav-md">
     <div class="container body">
       <div class="main_container">
