--- a/src/main/resources/Templates/login.html
+++ b/src/main/resources/Templates/login.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
 <html lang="en" html xmlns:th="http://www.thymeleaf.org">
-
-<th:block th:replace="Fragment/_head.html::head"></th:block>
+<head>
+  <th:block th:replace="Fragment/_head.html::head"></th:block>
+</head>
   <body class="login">
     <div>
       <a class="hiddenanchor" id="signup"></a>
