les vues liste chambre et detail  chambre ajout du js.html et de la methode searchBymatricule

--- a/src/main/resources/Templates/Fragment/_leftcolAdmin.html
+++ b/src/main/resources/Templates/Fragment/_leftcolAdmin.html
@@ -27,9 +27,9 @@
         <div class="menu_section">
 
             <ul class="nav side-menu">
-                <li><a th:href="@{Acceuil.html}"><i class="fa fa-home"></i> Acceuil </a></li>
+                <li><a th:href="@{/}"><i class="fa fa-home"></i> Acceuil </a></li>
                 <li><a th:href="@{gestion_des_paiements.html}"><i class="fa fa-money"></i> Gestion des Paiements </a> </li>
-                <li><a th:href="@{liste_des_chambres.html}"><i class="fa fa-bar-chart"></i> Gestion des Consommations </a></li>
+                <li><a th:href="@{listechambre}"><i class="fa fa-bar-chart"></i> Gestion des Consommations </a></li>
             </ul>
         </div>
     </div>
