--- a/src/main/resources/Templates/Uform_validation.html
+++ b/src/main/resources/Templates/Uform_validation.html
@@ -123,20 +123,7 @@
 
     </script>
 
-    <!-- jQuery -->
-    <script src="../vendors/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap -->
-    <script src="../vendors/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- FastClick -->
-    <script src="../vendors/fastclick/lib/fastclick.js"></script>
-    <!-- NProgress -->
-    <script src="../vendors/nprogress/nprogress.js"></script>
-    <!-- validator -->
-    <!-- <script src="../vendors/validator/validator.js"></script> -->
-
-    <!-- Custom Theme Scripts -->
-    <script src="../build/js/custom.min.js"></script>
-
+    <th:block th:replace="Fragment/_js.html::js"></th:block>
 </body>
 
 </html>
