les vues liste chambre et detail  chambre ajout du js.html et de la methode searchBymatricule

--- a/src/main/resources/Templates/infoEtudiant.html
+++ b/src/main/resources/Templates/infoEtudiant.html
@@ -60,7 +60,7 @@
                   </div>
                   <div class="x_content">
                     <br>
-                    <form id="demo-form2" th:action="@{/editeretudiantchambre}" th:method="post" th:object="${etudiamtchambreDto} data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
+                    <form id="demo-form2" th:action="@{/editeretudiantchambre}" th:method="post" th:object="${etudiantchambreDto} data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
   
                       <div class="item form-group">
                         <label class="col-form-label col-md-3 col-sm-3 label-align" for="first-name"><font _mstmutation="1" _msthash="520858" _msttexthash="93574">Prénom </font><span class="required">*</span>
