--- a/src/main/resources/Templates/liste_des_chambres.html
+++ b/src/main/resources/Templates/liste_des_chambres.html
@@ -86,7 +86,7 @@
                           </td>
                             <td>
                                 <a th:href="@{'/detail?matricule=' + ${etudiantchambreDtos.id2.matricule}}" class="btn btn-primary btn-xs"><i class="fa fa-eye"></i> Details</a>
-                                <a th:href="@{'/editerform?numero=' + ${etudiantchambreDtos.idChanbre.numero}}" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Modifier</a>
+                                <a th:href="@{'/editeretudiantchambreform?numero=' + ${etudiantchambreDtos.idChambre.numero}}" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Modifier</a>
                             </td>
                           
                         </tr>
