--- a/src/main/resources/Templates/Fragment/_leftcolUser.html
+++ b/src/main/resources/Templates/Fragment/_leftcolUser.html
@@ -3,7 +3,7 @@
 <th:block th:fragment="leftcolUser">
 <div class="left_col scroll-view">
     <div class="navbar nav_title" style="border: 0;">
-        <a th:href="@{Accueil.html}" class="site_title"><i class="fa fa-paw"></i> <span>Cite WE!</span></a>
+        <a th:href="@{indexadmin}" class="site_title"><i class="fa fa-paw"></i> <span>Cite WE!</span></a>
     </div>
 
     <div class="clearfix"></div>
