--- a/src/main/resources/Templates/gestion_des_paiements.html
+++ b/src/main/resources/Templates/gestion_des_paiements.html
@@ -38,10 +38,9 @@
                     <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                       <thead>
                         <tr>
-                          <th>N° de chambre</th>
+                          <th >N° de chambre</th>
                           <th>Nombre de Resident(s)</th>
                           <th>Nom des Residents</th>
-                          
                           <th>Date de Paiement</th>
                           <th>Montant</th>
                           <th>N° tel</th>
@@ -52,7 +51,7 @@
                       <tbody>
                         <tr>
                           <td>001</td>
-                          <td><img src="images/user.png" class="avatar" alt="Avatar"></td>
+                          <td><img th:src="@{/images/user.png}" class="avatar" alt="Avatar"></td>
                           <td>nixon mballa</td>
                           
                           <td>2011/04/25</td>
@@ -63,8 +62,8 @@
                         </tr>
                         <tr>
                           <td>002</td>
-                          <td><img src="images/user.png" class="avatar" alt="Avatar">
-                            <img src="images/user.png" class="avatar" alt="Avatar">
+                          <td><img th:src="@{/images/user.png}" class="avatar" alt="Avatar">
+                            <img th:src="@{/images/user.png}" class="avatar" alt="Avatar">
                           </td>
                           <td>nick mbilla<br>sonia tonfack</td>
                           
