--- a/src/main/resources/Templates/indexadmin.html
+++ b/src/main/resources/Templates/indexadmin.html
@@ -25,7 +25,7 @@
               <h1>Bienvenue ADMINISTRATEUR </h1>
             
               <h2>Gerer le fonctionnement de votre CITE</h2>
-              <a href="gestion_des_paiements.html" class="btn-get-started scrollto">Allons-y</a>
+              <a th:href="@{/}" class="btn-get-started scrollto">Allons-y</a>
             </div>
           </div><!-- End Hero -->
           <!-- /top tiles -->
