--- a/src/main/resources/Templates/Fragment/_head.html
+++ b/src/main/resources/Templates/Fragment/_head.html
@@ -11,7 +11,7 @@
     <title>CITE - WE! | </title>
 
     <!-- Bootstrap -->
-    <link href="cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
+    <link th:href="@{/cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css}">
     <link th:href="@{/gentelella-master/vendors/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
     <!-- Font Awesome -->
     <link th:href="@{/gentelella-master/vendors/font-awesome/css/font-awesome.min.css}" rel="stylesheet">
