--- a/src/main/resources/Templates/Fragment/_leftcolAdmin.html
+++ b/src/main/resources/Templates/Fragment/_leftcolAdmin.html
@@ -3,7 +3,7 @@
 <th:block th:fragment="leftcolAdmin">
 <div class="left_col scroll-view">
     <div class="navbar nav_title" style="border: 0;">
-        <a th:href="@{Accueil.html}" class="site_title"><i class="fa fa-paw"></i> <span>Cite WE!</span></a>
+        <a th:href="@{/}" class="site_title"><i class="fa fa-paw"></i> <span>Cite WE!</span></a>
     </div>
 
     <div class="clearfix"></div>
@@ -28,7 +28,7 @@
 
             <ul class="nav side-menu">
                 <li><a th:href="@{/}"><i class="fa fa-home"></i> Acceuil </a></li>
-                <li><a th:href="@{gestion_des_paiements.html}"><i class="fa fa-money"></i> Gestion des Paiements </a> </li>
+                <li><a th:href="@{listepaiements}"><i class="fa fa-money"></i> Gestion des Paiements </a> </li>
                 <li><a th:href="@{listechambre}"><i class="fa fa-bar-chart"></i> Gestion des Consommations </a></li>
             </ul>
         </div>
@@ -38,7 +38,7 @@
     <!-- /menu footer buttons -->
     <div class="sidebar-footer hidden-small">
 
-        <a data-toggle="tooltip" data-placement="top" title="Logout"th:href="@{login.html}">
+        <a data-toggle="tooltip" data-placement="top" title="Logout"th:href="@{login}">
             <i class="fa fa-sign-in"></i>
         </a>
     </div>
