--- a/src/main/resources/Templates/infoEtudiant.html
+++ b/src/main/resources/Templates/infoEtudiant.html
@@ -19,7 +19,7 @@
           <div class="">
             <div class="page-title">
               <div class="title_left">
-                <h3>Profil Chambre</h3>
+                <h3>Profil Chambre Etudiant</h3>
               </div>
 
               <div class="title_right">
